--- a/src/index.css
+++ b/src/index.css
@@ -26,7 +26,7 @@ button:hover {
 }
 .home-bg {
   height: 100vh;
-  background-image: url("D:\projects\A Travel Recommendation Web App\world.jpg");
+  background-image: url("/world.jpg");
   background-size: cover;
   background-position: center;
   position: relative;
